--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -11,12 +11,12 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :name %>
     <%= form.text_field :name, class: "form-control" %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= form.label :amount %>
     <%= form.text_field :amount, class: "form-control" %>
   </div>
