--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,14 +1,12 @@
 <p id="notice"><%= notice %></p>
 
+<h2><%= @item.name %></h2>
+
+<h3>Amount</h3>
 <p>
-  <strong>Name:</strong>
-  <%= @item.name %>
+  <%= number_to_currency(@item.amount, locale: :jp) %>
 </p>
 
-<p>
-  <strong>Amount:</strong>
-  <%= @item.amount %>
-</p>
-
-<%= link_to 'Edit', edit_item_path(@item) %> |
-<%= link_to 'Back', items_path %>
+<%= link_to 'List', items_path, class: "btn btn-primary" %>
+<%= link_to 'Edit', edit_item_path(@item), class: "btn btn-secondary" %> 
+<%= link_to 'Back', :back, class: "btn btn-secondary" %>
