--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,23 +2,21 @@
 
 <h1>Items</h1>
 
+<p><%= link_to 'New Item', new_item_path, class: "btn btn-secondary" %></p>
+
 <table class="table">
   <thead>
     <tr>
       <th>Name</th>
       <th>Amount</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @items.each do |item| %>
       <tr>
-        <td><%= item.name %></td>
-        <td><%= item.amount %></td>
-        <td><%= link_to 'Show', item %></td>
-        <td><%= link_to 'Edit', edit_item_path(item) %></td>
-        <td><%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to item.name, item %></td>
+        <td><%= number_to_currency(item.amount, locale: :jp) %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +24,3 @@
 
 <br>
 
-<%= link_to 'New Item', new_item_path %>
