--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -2,6 +2,8 @@
 
 <%= render 'form', item: @item %>
 
-<%= link_to 'Show', @item %> |
-<%= link_to 'Back', :back, class: "btn btn-default" %><br>
-<%= link_to 'Destroy', @item, method: :delete, data: {confirm: 'Are you sure?' }, class: "btn btn-danger" %>
+<p>
+  <%= link_to 'Show', @item, class: "btn btn-light" %>
+  <%= link_to 'Back', :back, class: "btn btn-light" %><br>
+</p>
+<p><%= link_to 'Destroy', @item, method: :delete, data: {confirm: 'Are you sure?' }, class: "btn btn-danger" %></p>
