--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', item: @item %>
 
-<%= link_to 'Back', :back, class: "btn btn-secondary" %>
+<%= link_to 'Back', :back, class: "btn btn-light" %>
