--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,6 +7,6 @@
   <%= number_to_currency(@item.amount, locale: :jp) %>
 </p>
 
-<%= link_to 'List', items_path, class: "btn btn-primary" %>
-<%= link_to 'Edit', edit_item_path(@item), class: "btn btn-secondary" %> 
-<%= link_to 'Back', :back, class: "btn btn-secondary" %>
+<%= link_to 'List', items_path, class: "btn btn-light" %>
+<%= link_to 'Edit', edit_item_path(@item), class: "btn btn-light" %> 
+<%= link_to 'Back', :back, class: "btn btn-light" %>
