--- a/app/views/periodicities/show.html.erb
+++ b/app/views/periodicities/show.html.erb
@@ -5,5 +5,5 @@
   <%= @periodicity.name %>
 </p>
 
-<%= link_to 'Edit', edit_periodicity_path(@periodicity) %> |
-<%= link_to 'Back', periodicities_path %>
+<%= link_to 'Edit', edit_periodicity_path(@periodicity), class: 'btn btn-secondary' %>
+<%= link_to 'List', periodicities_path, class: 'btn btn-secondary' %>
