--- a/app/views/periodicities/new.html.erb
+++ b/app/views/periodicities/new.html.erb
@@ -1,5 +1,6 @@
 <h1>New Periodicity</h1>
 
-<%= render 'form', periodicity: @periodicity %>
 
-<%= link_to 'Back', periodicities_path %>
+<p><%= render 'form', periodicity: @periodicity %></p>
+
+<p><%= link_to 'Back', periodicities_path, class: 'btn btn-secondary' %></p>
