--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Items</h1>
 
-<p><%= link_to 'New Item', new_item_path, class: "btn btn-light" %></p>
+<p><%= link_to 'New Item', new_item_path, class: "btn btn-primary" %></p>
 
 <table class="table">
   <thead>
