--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -2,11 +2,11 @@
 
 <h2><%= @item.name %></h2>
 
-<h3>Amount</h3>
 <p>
+  <strong>Amount:</strong>
   <%= number_to_currency(@item.amount, locale: :jp) %>
 </p>
 
-<%= link_to 'List', items_path, class: "btn btn-light" %>
-<%= link_to 'Edit', edit_item_path(@item), class: "btn btn-light" %> 
-<%= link_to 'Back', :back, class: "btn btn-light" %>
+<%= link_to 'List', items_path, class: "btn btn-secondary" %>
+<%= link_to 'Edit', edit_item_path(@item), class: "btn btn-secondary" %> 
+<%= link_to 'Back', :back, class: "btn btn-secondary" %>
