--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.text_field :amount, class: "form-control" %>
   </div>
 
+  <div class="form-group">
+    <%= form.label :periodicity %><br>
+    <%= form.collection_select :periodicity_id, Periodicity.all, :id, :name, {prompt: true}, {class: 'form-control'} %>
+  </div>
+
   <div class="actions">
 	  <p><%= form.submit class: "btn btn-primary" %></p>
   </div>
