--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -2,8 +2,6 @@
 
 <%= render 'form', item: @item %>
 
-<p>
-  <%= link_to 'Show', @item, class: "btn btn-secondary" %>
-  <%= link_to 'Back', :back, class: "btn btn-secondary" %><br>
-</p>
-<p><%= link_to 'Destroy', @item, method: :delete, data: {confirm: 'Are you sure?' }, class: "btn btn-danger" %></p>
+<%= link_to 'Show', @item, class: "btn btn-secondary" %>
+<%= link_to 'Back', :back, class: "btn btn-secondary" %>
+<%= link_to 'Destroy', @item, method: :delete, data: {confirm: 'Are you sure?' }, class: "btn btn-danger" %>
