--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -6,6 +6,10 @@
   <strong>Amount:</strong>
   <%= number_to_currency(@item.amount, locale: :jp) %>
 </p>
+<p>
+  <strong>Periodicity:</strong>
+  <%= @item.periodicity.name if @item.periodicity %>
+</p>
 
 <%= link_to 'List', items_path, class: "btn btn-secondary" %>
 <%= link_to 'Edit', edit_item_path(@item), class: "btn btn-secondary" %> 
