--- a/app/views/items/_index.html.erb
+++ b/app/views/items/_index.html.erb
@@ -8,7 +8,7 @@
   </thead>
 
   <tbody>
-    <% @items.each do |item| %>
+    <% items.each do |item| %>
       <tr>
         <td><%= link_to item.name, item %></td>
         <td><%= number_to_currency(item.amount, locale: :jp) %></td>
