--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -11,6 +11,12 @@
     </div>
   <% end %>
 
+
+  <div class="form-group">
+    <%= form.label :description %>
+    <%= form.text_field :description, class: "form-control" %>
+  </div>
+
   <div class="form-group">
     <%= form.label :name %>
     <%= form.text_field :name, class: "form-control" %>
