--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,25 +4,4 @@
 
 <p><%= link_to 'New Item', new_item_path, class: "btn btn-primary" %></p>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Amount</th>
-      <th>Periodicity</th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @items.each do |item| %>
-      <tr>
-        <td><%= link_to item.name, item %></td>
-	<td><%= number_to_currency(item.amount, locale: :jp) %></td>
-	<td><%= link_to item.periodicity.name, periodicity_path(item.periodicity) %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
+<p><%= render partial: 'items/index', locals: {items: @items} %></p>
