--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
-<h2><%= @item.name %></h2>
+<h2><%= @item.description %></h2>
+
+<p>
+  <strong>Name:</strong>
+  <%= @item.name %>
+</p>
 
 <p>
   <strong>Amount:</strong>
