--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -32,6 +32,11 @@
     <%= form.collection_select :periodicity_id, Periodicity.all, :id, :name, {prompt: true}, {class: 'form-control'} %>
   </div>
 
+  <div class="form-group">
+    <%= form.label :catecory %><br>
+    <%= form.collection_select :category_id, Category.all, :id, :name, {prompt: true}, {class: 'form-control'} %>
+  </div>
+
   <div class="actions">
 	  <p><%= form.submit class: "btn btn-primary" %></p>
   </div>
