--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,9 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @category.name %>
-</p>
+<h1>Category</h1>
+
+<h2><%= @category.name %></h2>
 
 <%= link_to 'Edit', edit_category_path(@category), class: 'btn btn-secondary' %> 
 <%= link_to 'Back', :back, class: 'btn btn-secondary' %>
