add category in items index partial view

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -6,3 +6,7 @@
 
 <%= link_to 'Edit', edit_category_path(@category), class: 'btn btn-secondary' %> 
 <%= link_to 'Back', :back, class: 'btn btn-secondary' %>
+
+<p>
+  <%= render partial: 'items/index', locals: { items: @category.items } %>
+</p>
