--- a/app/views/periodicities/show.html.erb
+++ b/app/views/periodicities/show.html.erb
@@ -4,7 +4,7 @@
 
 <p>
   <%= link_to 'Edit', edit_periodicity_path(@periodicity), class: 'btn btn-secondary' %>
-  <%= link_to 'List', periodicities_path, class: 'btn btn-secondary' %>
+  <%= link_to 'Back', :back, class: 'btn btn-secondary' %>
 </p>
 
 <p>
