sort categories on item form view

--- a/app/views/periodicities/show.html.erb
+++ b/app/views/periodicities/show.html.erb
@@ -1,6 +1,7 @@
 <p id="notice"><%= notice %></p>
 
-<h1><%= @periodicity.name %> Payment</h1>
+<h1>Periodicity</h1>
+<h2><%= @periodicity.name %> Payment</h2>
 
 <%= link_to 'Edit', edit_periodicity_path(@periodicity), class: 'btn btn-secondary' %>
 <%= link_to 'Back', :back, class: 'btn btn-secondary' %>
