add total amount in category show view

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -11,5 +11,5 @@
 
 
 <p>
-  <%= render partial: 'items/index', locals: { items: @category.items } %>
+  <%= render partial: 'items/index', locals: { items: @category.items.order(:description) } %>
 </p>
