--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -4,6 +4,16 @@
 
 <h2><%= @category.name %></h2>
 
+<p>
+  <strong>Annual Total Amount:</strong>
+  <%= number_to_currency @category.annual_total_amount, locale: :jp %>
+</p>
+
+<p>
+  <strong>Monthly Total Amount:</strong>
+  <%= number_to_currency @category.monthly_total_amount, locale: :jp %>
+</p>
+
 <%= link_to 'Edit', edit_category_path(@category), class: 'btn btn-secondary' %> 
 <%= link_to 'Back', :back, class: 'btn btn-secondary' %>
 
