--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -24,4 +24,4 @@
 
 <%= link_to 'Edit', edit_item_path(@item), class: "btn btn-secondary" %> 
 <%= link_to 'Back', :back, class: "btn btn-secondary" %>
-<%= link_to 'List', items_path, class: "btn btn-secondary" %>
+<%= link_to 'List of Items', items_path, class: "btn btn-secondary" %>
