apply text-md-right to the amount column of _index of items

--- a/app/views/items/_index.html.erb
+++ b/app/views/items/_index.html.erb
@@ -3,7 +3,7 @@
     <tr>
       <th>Description</th>
       <th>Name</th>
-      <th>Amount</th>
+      <th class="text-md-right">Amount</th>
       <th>Periodicity</th>
       <th>Category</th>
     </tr>
@@ -14,7 +14,7 @@
       <tr>
         <td><%= link_to item.description, item %></td>  
         <td><%= item.name %></td>
-        <td><%= number_to_currency(item.amount, locale: :jp) %></td>
+        <td class="text-md-right"><%= number_to_currency(item.amount, locale: :jp) %></td>
 	<td><%= link_to item.periodicity.name, periodicity_path(item.periodicity) %></td>
 	<td><%= link_to item.category.name, category_path(item.category) if item.category %></td>
       </tr>
